--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "aac7fc25",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7a098cc4",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5bf80565",
    "metadata": {},
    "outputs": [
@@ -36,10 +36,10 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 100.0.4896\n",
-      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/100.0.4896.60/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\April Vilmin\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60]\n"
+      "Current google-chrome version is 101.0.4951\n",
+      "Get LATEST chromedriver version for 101.0.4951 google-chrome\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/101.0.4951.41/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\April Vilmin\\.wdm\\drivers\\chromedriver\\win32\\101.0.4951.41]\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311b7af9",
+   "id": "14712854",
    "metadata": {},
    "source": [
     "### Visit the NASA Mars News Site"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "59bf57a3",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1b2bc1df",
    "metadata": {},
    "outputs": [],
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cd3cb052",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">While Stargazing on Mars, NASA's Curiosity Rover Spots Earth and Venus</div>"
+       "<div class=\"content_title\">NASA's Perseverance Mars Rover Gets Balanced</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1e699fe5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"While Stargazing on Mars, NASA's Curiosity Rover Spots Earth and Venus\""
+       "\"NASA's Perseverance Mars Rover Gets Balanced\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d8872b25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"This new portrait of the Red Planet's neighbors was taken during a time when there's more dust in the air on Mars.\""
+       "\"The mission team performed a crucial weight-balancing test on the rover in preparation for this summer's history-making launch to the Red Planet.\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "296cd5b1",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "91f327aa",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "11f485f4",
    "metadata": {},
    "outputs": [],
@@ -206,17 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9b2dbed4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6bdda8a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0b7238",
+   "id": "af843463",
    "metadata": {},
    "source": [
     "### Mars Facts"
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9313f38",
+   "id": "be9f63a3",
    "metadata": {},
    "source": [
     "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940f0d08",
+   "id": "e566ecbd",
    "metadata": {},
    "source": [
     "### Hemispheres"
@@ -397,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "549a61aa",
+   "execution_count": 16,
+   "id": "b3c0a9b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,24 +410,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dfa0e535",
+   "execution_count": 17,
+   "id": "196e7647",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\April Vilmin\\Andaconda\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:525: FutureWarning: browser.find_link_by_text is deprecated. Use browser.links.find_by_text instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
+    "links = browser.find_by_css('a.product-item img')\n",
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "var = links"
+    "# https://github.com/emmanuelmartinezs/Mission-to-Mars/blob/main/Mission_to_Mars_Challenge.ipynb\n",
+    "for i in range (len(links)):\n",
+    "     #create empty dictionary\n",
+    "     hemispheres = {} #declare and empty dictionary\n",
+    "     browser.find_by_css('a.product-item h3')[i].click()\n",
+    "     element = browser.find_link_by_text('Sample').first\n",
+    "     img_url = element['href']\n",
+    "     title = browser.find_by_css(\"h2.title\").text\n",
+    "     hemispheres[\"img_url\"] = img_url\n",
+    "     hemispheres[\"title\"] = title\n",
+    "     hemisphere_image_urls.append(hemispheres)\n",
+    "     browser.back()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af7363d8",
+   "execution_count": 18,
+   "id": "869b0009",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Print the list that holds the dictionary of each image url and title.\n",
     "hemisphere_image_urls \n"
@@ -435,17 +474,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0f7684e",
+   "execution_count": 19,
+   "id": "8ba0e4ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5. Quit the browser\n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd6741c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
